// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionTitle スナップショット ContainElements 1`] = `
<body>
  <div>
    <h2
      class="SectionTitle_sectionTitleStyle__1gfb2v30"
    >
      <a
        class="Link_linkStyle__m4v9430"
        href="#undefined"
      >
        Sample 
        <code>
          Title
        </code>
      </a>
    </h2>
  </div>
</body>
`;

exports[`SectionTitle スナップショット Sample 1`] = `
<body>
  <div>
    <h2
      class="SectionTitle_sectionTitleStyle__1gfb2v30"
    >
      <a
        class="Link_linkStyle__m4v9430"
        href="#undefined"
      >
        Sample Title
      </a>
    </h2>
  </div>
</body>
`;

exports[`SectionTitle スナップショット SubSection 1`] = `
<body>
  <div>
    <h3
      class="SectionTitle_subsectionTitleStyle__1gfb2v31"
    >
      <a
        class="Link_linkStyle__m4v9430"
        href="#undefined"
      >
        Sample SubTitle
      </a>
    </h3>
  </div>
</body>
`;
